# qoa

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  qoa.h  qoaconv.c  qoaplay.c
